Bug 70590 - desktop-shell does not render fullscreen with x11-backend and pixman
Summary: desktop-shell does not render fullscreen with x11-backend and pixman
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-17 21:59 UTC by U. Artie Eoff
Modified: 2013-10-24 23:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fullscreen weston, x11-backend, pixman-renderer (122.68 KB, image/png)
2013-10-17 21:59 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-10-17 21:59:38 UTC
Created attachment 87803 [details]
fullscreen weston, x11-backend, pixman-renderer

The desktop-shell does not render fullscreen with 'weston --backend=x11-backend.so --fullscreen --use-pixman'.  See attached image.



wayland (master) heads/master-0-g84247b7
drm (master) 2.4.47-0-g951ebe0
mesa (master) heads/master-0-ge2d1eaa
libva (master) heads/master-0-g73a11b3
intel-driver (master) heads/master-0-g01b39f7
weston (master) heads/master-0-g8e6f376
Comment 1 Kristian Høgsberg 2013-10-24 06:39:11 UTC
commit b5a4f986d4d1a7129184e5d81b94ef2c45972242
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Oct 23 23:38:50 2013 -0700

    compositor-x11: Use the fullscreen size provided by the configure event
    
    Make sure we initialize the x11 shm state using the right window size.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=70590


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.