compositor-x11: Use the fullscreen size provided by the configure event

Make sure we initialize the x11 shm state using the right window size.

https://bugs.freedesktop.org/show_bug.cgi?id=70590